[project]
name = "fx-volatility-surface-models"
version = "0.1.0"
description = "FX volatility surface models (Vanna-Volga, Reiswich-Wystup) applied to EUR/GBP options"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "scipy>=1.13.1",
]
